--- a/hw2/hw2.tex
+++ b/hw2/hw2.tex
@@ -477,13 +477,23 @@ Our results, with $\lambda = 0$, are shown below:
 \centering
 
 \begin{subfigure}[b]{2.25in}
-	\includegraphics[width = 2.25in]{plots/nonSep2_train_plot.png}
-	\caption{Our separator, shown on the training data, for data drawn from a distribution that is very averse to being linearly separated.}
+	\includegraphics[width = 2.25in]{plots/stev2_train_plot.png}
+	\caption{Our separator for \lambda = 0, shown on the training data}
 \end{subfigure}
 
 \begin{subfigure}[b]{2.25in}
-	\includegraphics[width = 2.25in]{plots/nonSep2_test_plot.png}
-	\caption{Our separator, shown on the test data, for data drawn from a distribution that is very averse to being linearly separated.}
+	\includegraphics[width = 2.25in]{plots/stdev2_test_plot_lambda_01.png}
+	\caption{Our separator, for lambda = 0.01, shown on the training data.}
+\end{subfigure}
+
+\begin{subfigure}[b]{2.25in}
+	\includegraphics[width = 2.25in]{plots/stdev2_test_plot_lambda_0_1.png}
+	\caption{Our separator, for lambda = 0.1, shown on the training data.}
+\end{subfigure}
+
+\begin{subfigure}[b]{2.25in}
+	\includegraphics[width = 2.25in]{plots/stdev2_test_plot_lambda_1.png}
+	\caption{Our separator, for lambda = 1, shown on the training data.}
 \end{subfigure}
 
 \end{figure}
@@ -507,7 +517,30 @@ These results show the output of our algorithm when we introduced no L1 regulari
 
 Notice that the result is barely changed at all by the introduction of L1 regularization; the graphs pre- and post-regularization are barely at all different. One difference we found very noticeable, however, was the great cost in additional time that occurred when we introduced L1 regularization; with the relatively low lambda value of 0.01, the gradient descent went from taking 26 seconds to terminate to 84 seconds, and with a lambda value of 1, the gradient descent took 153 seconds! This is probably due to the adverse effects of the L1 regularization term on the smoothness of the function. \\
 
-In addition to causing little effect on the shape and location of the separating line, we observed little difference in the alpha vector as a result of the introduction of an L1 regularization term. Final alpha values fluctuated slightly, usually downward, but no terms were driven to 0. Because of the great additional costs in computation time to introducing an L1 regularization term, and the lack of observed benefits, we decided to omit a regularization term from our experiments in the multiclass case.
+In addition to causing little effect on the shape and location of the separating line, we observed little difference in the alpha vector as a result of the introduction of an L1 regularization term. Final alpha values fluctuated slightly, usually downward, but no terms were driven to 0. Because of the great additional costs in computation time to introducing an L1 regularization term, and the lack of observed benefits, we decided to omit a regularization term from our experiments in the multiclass case. \\
+
+Regardless of how large we made $\lambda$, it remained true that all data points had nonzero values for $\alpha$. This implies that, in a strict sense, all points in every graph were ``support vectors''; they all contributed some nonzero amount to the location of the linear separator. Not only that, but unlike in the SVM case, their values were not bimodal; they were mostly around $10^{-3}$ or $10^{-4}$, with the largest magnitudes being no larger than 0.005, and the smallest magnitudes no smaller  Therefore, rather than declare all points support vectors, which would be uninteresting, we decided to artificallycreate a threshold that would exclude about half the points; the threshold we decided upon was $\alpha = 0.001$. Points with $\alpha > 0.001$ we call ``support vectors,'' and other points we do not. However, when we set $\lambda$ to 1, they displayed an interesting pattern; the ones far from the separator tended to be support vectors, whereas the points close to the separator tended to not be. This is quite different from what occurred in the SVM case, where the opposite is true. We hypothesize that why we see this pattern in logistic regression is because the farthest points tend to have the most extreme probabilities (they have very small probabilities of coming from either class) and as a result, their effect on the separator is magnified.
+
+When we set $\lambda = 0$, we saw an even stranger pattern, which was that points tended to not be support vectors only if they belonged to a particular class. This was very strange, and we theorized that we saw the effect because in order for the $\alpha$ values to reflect the amount of effect the point has on the separator, it's necessary to have a substantial L1 regularization term.
+
+\begin{figure}
+\centering
+
+\begin{subfigure}[b]{2.25in}
+	\includegraphics[width = 2.25in]{plots/stdev2_test_plot_lambda_sup_vectors.png}
+	\caption{In this graph, dots are support vectors and X's are not support vectors. $\lambda = 1$, threshold is $\alpha = 0.001$}
+\end{subfigure}
+
+\begin{subfigure}[b]{2.25in}
+	\includegraphics[width = 2.25in]{plots/stdev2_test_plot_lambda_0_supvec.png}
+	\caption{In this graph, dots are support vectors and X's are not support vectors. $\lambda = 0$, threshold is $\alpha = 0.001$}
+\end{subfigure}
+
+\end{figure}
+
+
+
+
 
 
 
